Project styles have been implemented, and the basic HTML page structure has been added.

--- a/apps/core/templates/core/includes/header.html
+++ b/apps/core/templates/core/includes/header.html
@@ -1,7 +1,8 @@
 <header>
     <nav>
         <ul class="nav-left">
-            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'welcome' %}">Головна</a></li>
+            <li><a href="{% url 'about' %}">Про проєкт</a></li>
         </ul>
     </nav>
 </header>
