--- a/apps/core/templates/core/pages/welcome.html
+++ b/apps/core/templates/core/pages/welcome.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Welcome{% endblock %}
+{% block title %}Головна - Declarations analysis{% endblock %}
 {% block content %}
-    <h3>Welcome</h3>
-{% endblock content %}
+<div class="welcome">
+    <h3>Ласкаво просимо до Declarations analysis</h3>
+    <p>Досліджуйте декларації публічних службовців, аналізуйте майно, доходи, транспорт і зв’язки.</p>
+    <p>Ваш надійний інструмент для прозорості та боротьби з корупцією.</p>
+</div>
+{% endblock %}
