--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Site{% endblock %}</title>
+    <title>{% block title %}Declarations analysis{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
