Added declarants page, updated styles

--- a/apps/core/templates/core/includes/header.html
+++ b/apps/core/templates/core/includes/header.html
@@ -3,6 +3,7 @@
         <ul class="nav-left">
             <li><a href="{% url 'welcome' %}">Головна</a></li>
             <li><a href="{% url 'about' %}">Про проєкт</a></li>
+            <li><a href="{% url 'declarants' %}">Декларанти</a></li>
         </ul>
     </nav>
 </header>
