--- a/apps/core/templates/core/pages/declarants.html
+++ b/apps/core/templates/core/pages/declarants.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Declarants{% endblock %}
+{% block title %}Декларанти{% endblock %}
 {% block content %}
 <div class="declarants-container">
     <form action="{% url 'declarants' %}" method="post" class="declarant-form">
