Updated, added declarants_search

--- a/apps/core/templates/core/includes/header.html
+++ b/apps/core/templates/core/includes/header.html
@@ -4,6 +4,7 @@
             <li><a href="{% url 'welcome' %}">Головна</a></li>
             <li><a href="{% url 'about' %}">Про проєкт</a></li>
             <li><a href="{% url 'declarants' %}">Декларанти</a></li>
+            <li><a href="{% url 'declarants_search' %}">Пошук декларантів</a></li>
         </ul>
     </nav>
 </header>
